src/pp/snapshots/cendol__pp__tests_preprocessor__if_directive_complex_spacing.snap
---
source: src/pp/tests_preprocessor.rs
expression: tokens
---
- kind: Identifier
  text: int
- kind: Identifier
  text: x
- kind: Assign
  text: "="
- kind: Number
  text: "1"
- kind: Semicolon
  text: ;
