src/pp/snapshots/cendol__pp__tests_preprocessor__include_syntax_variations.snap
---
source: src/pp/tests_preprocessor.rs
expression: debug_tokens
---
- kind: Identifier
  text: int
- kind: Identifier
  text: a
- kind: Assign
  text: "="
- kind: Number
  text: "1"
- kind: Semicolon
  text: ;
- kind: Identifier
  text: int
- kind: Identifier
  text: a
- kind: Assign
  text: "="
- kind: Number
  text: "1"
- kind: Semicolon
  text: ;
- kind: Identifier
  text: int
- kind: Identifier
  text: a
- kind: Assign
  text: "="
- kind: Number
  text: "1"
- kind: Semicolon
  text: ;
