src/pp/snapshots/cendol__pp__tests_preprocessor__macro_arguments_with_newlines_and_comments.snap
---
source: src/pp/tests_preprocessor.rs
expression: tokens
---
- kind: Identifier
  text: int
- kind: Identifier
  text: res
- kind: Assign
  text: "="
- kind: Number
  text: "1"
- kind: Plus
  text: +
- kind: Number
  text: "2"
- kind: Semicolon
  text: ;
