src/pp/snapshots/cendol__pp__tests_preprocessor__undef_macro.snap
---
source: src/pp/tests_preprocessor.rs
expression: tokens
---
- kind: Identifier
  text: int
- kind: Identifier
  text: x
- kind: Assign
  text: "="
- kind: Number
  text: "1"
- kind: Semicolon
  text: ;
- kind: Identifier
  text: int
- kind: Identifier
  text: y
- kind: Assign
  text: "="
- kind: Identifier
  text: A
- kind: Semicolon
  text: ;
