src/pp/snapshots/cendol__pp__tests_preprocessor__undef_undefined_macro_is_ignored.snap
---
source: src/pp/tests_preprocessor.rs
expression: "(tokens, diags)"
---
- - kind: Identifier
    text: int
  - kind: Identifier
    text: x
  - kind: Assign
    text: "="
  - kind: Number
    text: "1"
  - kind: Semicolon
    text: ;
- []
